# ISM330BX

./: CMakeLists.txt  LICENSE  README.md
include/: ism330bx.h  ism330bx_registers.h  ism330bx_types.h
src/: ism330bx.c
